# modules/model/src/main/scala/fr/janalyse/sotohp/model/Face.scala
@@ -9,6 +9,8 @@ case class Face(
   identifiedPersonId: Option[PersonId],
   inferredIdentifiedPersonId: Option[PersonId],
   inferredIdentifiedPersonConfidence: Option[Double],
+  inferredTimestamp: Option[OffsetDateTime],
+  inferredIgnore: Option[Boolean],
   timestamp: OffsetDateTime,
   path: FacePath
 )
